# LLM-Eval

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/dataset/: klokan.yaml  tsp-analytical.yaml  tsp-critical.yaml  tsp-culture.yaml  tsp-verbal.yaml
config/model/: aya.yaml  claude-2.1.yaml  claude-haiku.yaml  claude-opus.yaml  claude-sonet.yaml  cohere-r.yaml  gemini-pro.yaml  gemma-it.yaml  gpt3.5.yaml  gpt4.yaml  mistral-large.yaml  mistral-medium.yaml  mixtral.yaml  sonar-8x7b.yaml  t5-test.yaml
config/task/: qa-en-prompt.yaml  qa.yaml
czeval/: common.py  prompt_utils.py  run.py  utils.py
czeval/config/dataset/: __init__.py  load_dataset.py
czeval/config/model/: __init__.py  load_model.py
czeval/config/task/: __init__.py  load_task.py
czeval/metrics/: functions.py  utils.py
czeval/model/: modal.py  open_router.py
czeval/transforms/: __init__.py  functions.py  utils.py
leaderboard-scripts/: evaluate.ipynb  klokan.csv  table.csv  tsp.csv
mlruns/.trash/344869315543562889/: meta.yaml
mlruns/.trash/535796616695185611/: meta.yaml
mlruns/.trash/780484759666532536/: meta.yaml
mlruns/.trash/856798332625152319/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/011921648b1e4fba92c86c6ed21bf54f/: meta.yaml
mlruns/193975243763088023/: meta.yaml
mlruns/519991904318017693/: meta.yaml
mlruns/603996644784169297/: meta.yaml
mlruns/842945248455049410/: meta.yaml
mlruns/856798332625152319/: meta.yaml
mlruns/996016737840831842/: meta.yaml
scripts/: run_tsp.sh
tests/tt/: test_run.py
(+828 files in other folders)
